--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://andysantisteban.github.io/todo"
+  "homepage": "https://github.com/AndySantisteban/todo"
 }
